--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
       "@components/*": ["components/*"]
     }
