--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
+    "lil-gui": "^0.18.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
