--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.6.0",
-    "@strapi/plugin-users-permissions": "4.6.0",
     "@strapi/plugin-i18n": "4.6.0",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.6.0",
+    "@strapi/strapi": "4.6.0",
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-ja-pack": "^1.0.2"
   },
   "author": {
     "name": "A Strapi developer"
