--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -5,7 +5,8 @@
       "@/*": ["./*"],
       "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@styles/*": ["styles/*"]
     }
   }
 }
