--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-three/drei": "^9.57.0",
+    "@react-three/fiber": "^8.11.7",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
     "eslint": "8.33.0",
