--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@react-three/drei": "^9.58.2",
+    "@react-three/fiber": "^8.12.0",
     "antd": "^5.2.0",
     "axios": "^1.3.2",
+    "classnames": "^2.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
