--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.1.6",
     "firebase": "^9.17.1",
     "next": "13.1.6",
+    "nextjs-progressbar": "0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.149.0"
