--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "express": "^4.18.2",
     "firebase": "^9.17.1",
     "next": "13.1.6",
     "nextjs-progressbar": "0.0.16",
