--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
+    "gsap": "^3.11.5",
     "next": "13.1.6",
     "nextjs-progressbar": "0.0.16",
     "react": "18.2.0",
