--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["./*"],
       "@assets/*": ["assets/*"],
+      "@animations/*": ["animations/*"],
       "@utils/*": ["utils/*"],
       "@components/*": ["components/*"],
       "@styles/*": ["styles/*"]
