--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@next/font": "13.1.6",
     "@react-three/drei": "^9.58.2",
     "@react-three/fiber": "^8.12.0",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "eslint": "8.33.0",
