--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.130",
+    "@mui/material": "^5.13.1",
+    "@mui/system": "^5.13.1",
     "@next/font": "13.1.6",
     "@react-three/drei": "^9.58.2",
     "@react-three/fiber": "^8.12.0",
@@ -21,7 +25,7 @@
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
-    "gsap": "^3.11.5",
+    "gsap": "^3.9.1",
     "next": "13.1.6",
     "nextjs-progressbar": "0.0.16",
     "react": "18.2.0",
