--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
+    "firebase-admin": "^11.9.0",
     "gsap": "^3.9.1",
     "next": "13.1.6",
     "nextjs-progressbar": "0.0.16",
