--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "@strapi/plugin-i18n": "4.6.0",
     "@strapi/plugin-users-permissions": "4.6.0",
     "@strapi/strapi": "4.6.0",
-    "better-sqlite3": "^7.6.2"
+    "better-sqlite3": "^7.6.2",
+    "strapi-plugin-vercel-deploy": "^1.4.0"
   },
   "author": {
     "name": "A Strapi developer"
