--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "uuid": "614d3655-fb04-4885-b993-c132039aadd0"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
+    "node": ">=18.0.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
