--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "nextjs-progressbar": "0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.1",
     "three": "^0.149.0"
   },
   "devDependencies": {
