--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,6 @@
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
     "gsap": "^3.11.01",
     "next": "13.1.6",
@@ -33,6 +31,8 @@
     "three": "^0.149.0"
   },
   "devDependencies": {
-    "lil-gui": "^0.18.1"
+    "lil-gui": "^0.18.1",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6"
   }
 }
