--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,20 +19,24 @@
     "@react-three/drei": "^9.58.2",
     "@react-three/fiber": "^8.12.0",
     "@sendgrid/mail": "^7.7.0",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "express": "^4.18.2",
     "gsap": "^3.11.01",
     "next": "13.1.6",
     "nextjs-progressbar": "0.0.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.32.1",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "lil-gui": "^0.18.1",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6"
+    "eslint-config-next": "13.1.6",
+    "lil-gui": "^0.18.1"
   }
 }
