--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "react-dom": "^18.2.0",
     "sharp": "^0.32.1",
     "three": "^0.149.0",
-    "typescript": "^5.0.0"
+    "typescript": "^>=3.3.1 <5.0.0"
   },
   "devDependencies": {
     "eslint": "8.33.0",
